--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,66 +1,65 @@
 nav {
-	margin: 0;
-	width: 100%;
-	height: 60px;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: fixed;
-	top: 0;
-	background-color: rgb(25, 25, 25);
-	z-index: 10;
+    margin: 0;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: sticky;
+    top: 0;
+    background-color: rgb(25, 25, 25);
+    z-index: 10;
 }
 
 a {
-	font-family: Lato, Sans-Serif;
-	text-decoration: none;
-	color: var(--accent);
-	transition: 250ms;
-	width: 150px;
-	white-space: nowrap;
-	text-align: center;
-	
+    font-family: Lato, Sans-Serif;
+    text-decoration: none;
+    color: var(--accent);
+    transition: 250ms;
+    width: 150px;
+    white-space: nowrap;
+    text-align: center;
 }
 
 a:hover {
     letter-spacing: 2px;
-	transform: scale(1.1);
+    transform: scale(1.1);
 }
 
 .logo {
-	position: absolute;
-	left: 0;
-	margin-inline: 15px;
+    position: absolute;
+    left: 0;
+    margin-inline: 15px;
 }
 
 .nav-links {
-	display: flex;
-	justify-content: center;
-	/* flex-grow: 1; */
-	height: 100%;
-	align-items: center;
-	gap: 15px;
+    display: flex;
+    justify-content: center;
+    /* flex-grow: 1; */
+    height: 100%;
+    align-items: center;
+    gap: 15px;
 }
 
 .gameSearch {
-	position: absolute;
-	right: 50px;
+    position: absolute;
+    right: 50px;
 }
 
 input[class='searchBar'] {
-	background-color: rgb(50, 50, 50);
-	color: whitesmoke;
-	padding: 5px 7px;
-	border-color: var(--accent);
-	border-radius: 9999999cm;
+    background-color: rgb(50, 50, 50);
+    color: whitesmoke;
+    padding: 5px 7px;
+    border-color: var(--accent);
+    border-radius: 9999999cm;
 }
 .material-symbols-outlined {
-	position: absolute;
-	margin-inline: 15px;
-	right: -50px;
-	top: 2px;
+    position: absolute;
+    margin-inline: 15px;
+    right: -50px;
+    top: 2px;
 }
 
 .searchBar::placeholder {
-	color: #64738f;
+    color: #64738f;
 }
